--- a/app/index.html
+++ b/app/index.html
@@ -476,7 +476,72 @@
             background: rgba(255,255,255,0.02);
         }
 
-        /* Hide number input spin buttons */
+        .sidebar-tab-btn {
+            color: #64748b;
+            background: transparent;
+            position: relative;
+            z-index: 10;
+        }
+        .dark .sidebar-tab-btn {
+            color: #94a3b8;
+        }
+        .sidebar-tab-btn.active {
+            color: #ffffff !important;
+        }
+        .dark .sidebar-tab-btn.active {
+            color: #ffffff !important;
+        }
+
+        /* Shimmer Animation */
+        @keyframes shimmer-pill {
+            0% { transform: translateX(-150%) skewX(-25deg); }
+            100% { transform: translateX(250%) skewX(-25deg); }
+        }
+
+        #tab-indicator {
+            position: absolute;
+            background: linear-gradient(135deg, #8b5cf6, #3b82f6);
+            border: 1px solid rgba(255, 255, 255, 0.25);
+            box-shadow:
+                0 10px 25px -5px rgba(59, 130, 246, 0.3),
+                0 8px 10px -6px rgba(139, 92, 246, 0.2);
+            transition: all 0.5s cubic-bezier(0.2, 1, 0.2, 1);
+            z-index: 5;
+            overflow: hidden;
+        }
+
+        #tab-indicator::after {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 60%;
+            height: 100%;
+            background: linear-gradient(
+                to right,
+                transparent,
+                rgba(255, 255, 255, 0.4),
+                transparent
+            );
+            animation: shimmer-pill 2.5s infinite linear;
+        }
+
+        .dark #tab-indicator {
+            background: linear-gradient(135deg, #7c3aed, #2563eb);
+            border: 1px solid rgba(255, 255, 255, 0.35);
+            box-shadow:
+                0 0 20px rgba(37, 99, 235, 0.25),
+                0 0 40px rgba(124, 58, 237, 0.1);
+        }
+
+        .dark #tab-indicator::after {
+            background: linear-gradient(
+                to right,
+                transparent,
+                rgba(255, 255, 255, 0.3),
+                transparent
+            );
+        }
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -772,24 +837,129 @@
             <div class="absolute top-[-10%] right-[-10%] w-64 h-64 bg-primary-500/10 rounded-full blur-3xl"></div>
             <div class="absolute bottom-[-10%] left-[-10%] w-64 h-64 bg-accent-cyan/10 rounded-full blur-3xl"></div>
 
-            <div class="max-w-md text-center z-10">
-                <div class="w-24 h-24 bg-white dark:bg-slate-900 rounded-[2.5rem] shadow-2xl shadow-primary-500/10 flex items-center justify-center mx-auto mb-8 border border-slate-100 dark:border-white/5 transform rotate-12">
-                    <i data-lucide="pie-chart" class="w-12 h-12 text-primary-500 transform -rotate-12"></i>
+            <!-- Tab Header -->
+            <div class="absolute top-0 left-0 right-0 z-30 p-4">
+                <div class="flex p-1 gap-1 bg-white/40 dark:bg-slate-900/40 backdrop-blur-3xl rounded-2xl border border-white/20 dark:border-white/5 shadow-lg relative" id="tab-bar">
+                    <!-- iOS Style Indicator -->
+                    <div id="tab-indicator" class="rounded-xl"></div>
+
+                    <button onclick="switchTab('chart')" id="tab-btn-chart" class="flex-1 py-2.5 px-4 rounded-xl text-xs font-black uppercase tracking-widest transition-all sidebar-tab-btn active">
+                        <div class="flex items-center justify-center gap-2">
+                            <i data-lucide="line-chart" class="w-4 h-4"></i>
+                            <span class="hidden xl:block">Biểu đồ</span>
+                        </div>
+                    </button>
+                    <button onclick="switchTab('news')" id="tab-btn-news" class="flex-1 py-2.5 px-4 rounded-xl text-xs font-black uppercase tracking-widest transition-all sidebar-tab-btn">
+                        <div class="flex items-center justify-center gap-2">
+                            <i data-lucide="newspaper" class="w-4 h-4"></i>
+                            <span class="hidden xl:block">Tin tức</span>
+                        </div>
+                    </button>
+                    <button onclick="switchTab('analysis')" id="tab-btn-analysis" class="flex-1 py-2.5 px-4 rounded-xl text-xs font-black uppercase tracking-widest transition-all sidebar-tab-btn">
+                        <div class="flex items-center justify-center gap-2">
+                            <i data-lucide="microscope" class="w-4 h-4"></i>
+                            <span class="hidden xl:block">Phân tích</span>
+                        </div>
+                    </button>
                 </div>
-                <h2 class="text-3xl font-black text-slate-800 dark:text-slate-100 mb-4 tracking-tight">Trung tâm Phân tích</h2>
-                <p class="text-slate-500 dark:text-slate-400 font-medium leading-relaxed italic opacity-80">
-                    Dữ liệu thị trường thời gian thực, biểu đồ kỹ thuật nâng cao và tin tức kinh tế vĩ mô sẽ được hiển thị tại đây.
-                </p>
-                <div class="mt-10 flex gap-2 justify-center">
-                    <div class="w-2 h-2 rounded-full bg-primary-500/20"></div>
-                    <div class="w-2 h-2 rounded-full bg-primary-500/40"></div>
-                    <div class="w-2 h-2 rounded-full bg-primary-500/20"></div>
+            </div>
+
+            <!-- Tab Content Area -->
+            <div id="tab-content-container" class="flex-1 w-full pt-20 px-4 pb-4 overflow-hidden z-10">
+                <!-- Data Placeholder / Welcome (Hidden by default since Chart is active) -->
+                <div id="tab-empty-state" class="hidden h-full flex flex-col items-center justify-center text-center max-w-sm mx-auto">
+                    <div class="w-20 h-20 bg-white/50 dark:bg-slate-900/50 rounded-3xl shadow-xl flex items-center justify-center mb-6 border border-white/40 dark:border-white/10 transform rotate-6">
+                        <i data-lucide="pie-chart" class="w-10 h-10 text-primary-500 transform -rotate-6"></i>
+                    </div>
+                    <h3 class="text-xl font-black text-slate-800 dark:text-slate-100 mb-2 tracking-tight">Trung tâm Phân tích</h3>
+                    <p class="text-xs text-slate-500 dark:text-slate-400 font-bold uppercase tracking-widest leading-relaxed opacity-70">
+                        Chọn một tab phía trên để xem chi tiết thông tin thị trường
+                    </p>
+                </div>
+
+                <!-- Technical Chart Tab (Visible by default) -->
+                <div id="tab-content-chart" class="h-full w-full flex flex-col">
+                    <div class="flex-1 bg-white/20 dark:bg-slate-900/20 rounded-3xl border border-white/40 dark:border-white/10 backdrop-blur-sm flex flex-col items-center justify-center p-8 text-center border-dashed">
+                        <div class="w-16 h-16 bg-primary-100/50 dark:bg-primary-900/20 rounded-2xl flex items-center justify-center mb-4 text-primary-500">
+                            <i data-lucide="line-chart" class="w-8 h-8"></i>
+                        </div>
+                        <h4 class="text-lg font-bold text-slate-700 dark:text-slate-300">Biểu đồ kỹ thuật</h4>
+                        <p class="text-sm text-slate-500 dark:text-slate-500 mt-2">Tính năng đang được phát triển. Tích hợp TradingView đang được thiết lập.</p>
+                    </div>
+                </div>
+
+                <!-- Related News Tab -->
+                <div id="tab-content-news" class="hidden h-full w-full overflow-y-auto custom-scrollbar pr-2">
+                    <div class="space-y-4">
+                        <div class="p-5 bg-white/30 dark:bg-slate-950/40 rounded-3xl border border-white/40 dark:border-white/5 backdrop-blur-md">
+                            <div class="text-[10px] font-black text-primary-600 dark:text-primary-400 uppercase tracking-widest mb-2 px-1">Tài chính vĩ mô • 15 phút trước</div>
+                            <h4 class="font-bold text-slate-800 dark:text-slate-200 leading-snug">VN-Index bứt phá ngưỡng cản tâm lý, dòng tiền lan tỏa mạnh mẽ</h4>
+                        </div>
+                        <div class="p-5 bg-white/30 dark:bg-slate-950/40 rounded-3xl border border-white/40 dark:border-white/5 backdrop-blur-md">
+                            <div class="text-[10px] font-black text-primary-600 dark:text-primary-400 uppercase tracking-widest mb-2 px-1">Tin doanh nghiệp • 1 giờ trước</div>
+                            <h4 class="font-bold text-slate-800 dark:text-slate-200 leading-snug">Nhiều cổ phiếu ngân hàng lập đỉnh mới nhờ kết quả kinh doanh đột phá</h4>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Deep Analysis Tab -->
+                <div id="tab-content-analysis" class="hidden h-full w-full overflow-y-auto custom-scrollbar pr-2">
+                    <div class="p-6 bg-white/40 dark:bg-slate-900/40 rounded-[2rem] border border-white/50 dark:border-white/10 backdrop-blur-2xl">
+                        <div class="flex items-center gap-3 mb-6">
+                            <div class="w-10 h-10 bg-accent-cyan/20 rounded-xl flex items-center justify-center text-accent-cyan">
+                                <i data-lucide="search" class="w-5 h-5"></i>
+                            </div>
+                            <h4 class="font-black text-slate-800 dark:text-white uppercase tracking-tighter">Báo cáo phân tích chuyên sâu</h4>
+                        </div>
+                        <p class="text-sm text-slate-600 dark:text-slate-400 leading-relaxed font-medium">
+                            Các phân tích đa chiều về doanh nghiệp, định giá và dự báo xu hướng dài hạn sẽ được bộ não AI tổng hợp chi tiết tại đây sau mỗi lượt truy vấn.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
 
     <script>
+        function switchTab(tabId) {
+            // Hide all contents
+            document.getElementById('tab-empty-state').classList.add('hidden');
+            document.getElementById('tab-content-chart').classList.add('hidden');
+            document.getElementById('tab-content-news').classList.add('hidden');
+            document.getElementById('tab-content-analysis').classList.add('hidden');
+
+            // Show selected content
+            document.getElementById(`tab-content-${tabId}`).classList.remove('hidden');
+
+            // Update button states
+            document.querySelectorAll('.sidebar-tab-btn').forEach(btn => {
+                btn.classList.remove('active');
+            });
+            const activeBtn = document.getElementById(`tab-btn-${tabId}`);
+            activeBtn.classList.add('active');
+
+            // Animate indicator
+            updateTabIndicator(activeBtn);
+        }
+
+        function updateTabIndicator(btn) {
+            const indicator = document.getElementById('tab-indicator');
+            const tabBar = document.getElementById('tab-bar');
+
+            if (btn && indicator && tabBar) {
+                indicator.style.width = `${btn.offsetWidth}px`;
+                indicator.style.height = `${btn.offsetHeight}px`;
+                indicator.style.left = `${btn.offsetLeft}px`;
+                indicator.style.top = `${btn.offsetTop}px`;
+            }
+        }
+
+        // Initialize Tab Indicator on load
+        window.addEventListener('load', () => {
+            const activeBtn = document.querySelector('.sidebar-tab-btn.active');
+            if (activeBtn) updateTabIndicator(activeBtn);
+        });
+
         // Initialize Lucide Icons
         lucide.createIcons();
 
@@ -819,6 +989,16 @@
             if (newLeftWidth > 80) newLeftWidth = 80;
 
             leftColumn.style.width = `${newLeftWidth}%`;
+
+            // Re-sync tab indicator in real-time
+            const activeBtn = document.querySelector('.sidebar-tab-btn.active');
+            if (activeBtn) updateTabIndicator(activeBtn);
+        });
+
+        // Sync tab indicator on window resize
+        window.addEventListener('resize', () => {
+            const activeBtn = document.querySelector('.sidebar-tab-btn.active');
+            if (activeBtn) updateTabIndicator(activeBtn);
         });
 
         document.addEventListener('mouseup', () => {
