--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trade Agent - Professional Stock Assistant</title>
+    <link rel="icon" type="image/svg+xml" href="/static/logo.svg">
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- Lucide Icons -->
@@ -600,8 +601,8 @@
     <!-- Header -->
     <header class="border-b border-white/40 dark:border-white/5 bg-white/40 dark:bg-slate-950/40 backdrop-blur-2xl px-8 py-4 flex items-center justify-between z-[60] sticky top-0">
         <div class="flex items-center gap-3 relative">
-            <div class="bg-premium-gradient p-2 rounded-xl shadow-lg shadow-primary-500/30 ring-2 ring-white/20">
-                <i data-lucide="trending-up" class="w-6 h-6 text-white"></i>
+            <div class="bg-white dark:bg-slate-900 border border-indigo-100 dark:border-indigo-900/30 p-1.5 rounded-xl shadow-lg shadow-indigo-500/10 ring-1 ring-indigo-500/10 dark:ring-white/10">
+                <img src="/static/logo.svg" alt="Trade Agent Logo" class="w-7 h-7 object-contain">
             </div>
             <div>
                 <h1 class="text-2xl font-black bg-clip-text text-transparent bg-premium-gradient tracking-tight">Trade Agent</h1>
@@ -868,8 +869,8 @@
             <div id="tab-content-container" class="flex-1 w-full pt-20 px-4 pb-4 overflow-hidden z-10">
                 <!-- Data Placeholder / Welcome (Hidden by default since Chart is active) -->
                 <div id="tab-empty-state" class="hidden h-full flex flex-col items-center justify-center text-center max-w-sm mx-auto">
-                    <div class="w-20 h-20 bg-white/50 dark:bg-slate-900/50 rounded-3xl shadow-xl flex items-center justify-center mb-6 border border-white/40 dark:border-white/10 transform rotate-6">
-                        <i data-lucide="pie-chart" class="w-10 h-10 text-primary-500 transform -rotate-6"></i>
+                    <div class="w-20 h-20 bg-white/50 dark:bg-slate-900/50 rounded-3xl shadow-xl flex items-center justify-center mb-6 border border-white/40 dark:border-white/10 transform rotate-6 p-4">
+                        <img src="/static/logo.svg" alt="Logo" class="w-full h-full object-contain transform -rotate-6">
                     </div>
                     <h3 class="text-xl font-black text-slate-800 dark:text-slate-100 mb-2 tracking-tight">Trung tâm Phân tích</h3>
                     <p class="text-xs text-slate-500 dark:text-slate-400 font-bold uppercase tracking-widest leading-relaxed opacity-70">
