--- a/app/index.html
+++ b/app/index.html
@@ -1034,16 +1034,18 @@
     </div>
 
     <!-- Main Content -->
-    <main class="flex-1 flex overflow-hidden relative z-10" id="main-container">
+    <main
+      class="flex-1 flex flex-col lg:flex-row overflow-y-auto lg:overflow-hidden relative z-10"
+      id="main-container"
+    >
       <!-- Left Column (initially 50%) -->
       <aside
         id="left-column"
-        class="flex flex-col border-r border-white/20 dark:border-white/5 bg-white/20 dark:bg-slate-950/20 backdrop-blur-xl relative"
-        style="width: 50%"
+        class="flex flex-col border-b lg:border-b-0 lg:border-r border-white/20 dark:border-white/5 bg-white/20 dark:bg-slate-950/20 backdrop-blur-xl relative w-full h-auto min-h-[85vh] lg:h-full lg:w-[50%] lg:min-h-0 overflow-hidden shrink-0"
       >
         <!-- Top Segment (Input Area) -->
         <div
-          class="p-8 border-b border-white/20 dark:border-white/10 bg-white/30 dark:bg-slate-950/30 backdrop-blur-2xl"
+          class="p-4 lg:p-8 border-b border-white/20 dark:border-white/10 bg-white/30 dark:bg-slate-950/30 backdrop-blur-2xl"
         >
           <label
             for="user-task"
@@ -1104,7 +1106,7 @@
         <!-- Bottom Segment (Conversation Display) -->
         <div
           id="chat-container"
-          class="flex-1 overflow-y-auto p-8 custom-scrollbar bg-transparent"
+          class="flex-1 min-h-0 overflow-y-auto p-4 lg:p-8 custom-scrollbar bg-transparent"
         >
           <div id="messages" class="space-y-8">
             <!-- Default Welcome Message -->
@@ -1151,12 +1153,12 @@
       </aside>
 
       <!-- Vertical Resizer -->
-      <div id="resizer" class="h-full"></div>
+      <div id="resizer" class="hidden lg:block h-full"></div>
 
       <!-- Right Column (initially 50%) -->
       <div
         id="right-column"
-        class="flex-1 bg-white/10 dark:bg-slate-950/20 backdrop-blur-sm flex flex-col relative overflow-hidden"
+        class="w-full h-auto min-h-[85vh] lg:flex-1 lg:h-full lg:min-h-0 bg-white/10 dark:bg-slate-950/20 backdrop-blur-sm flex flex-col relative overflow-visible lg:overflow-hidden shrink-0"
       >
         <!-- Background Decoration -->
         <div
@@ -1191,7 +1193,9 @@
         ></div>
 
         <!-- Tab Header -->
-        <div class="absolute top-0 left-0 right-0 z-30 px-8 pr-8 pt-5">
+        <div
+          class="absolute top-0 left-0 right-0 z-30 px-4 pt-4 lg:px-8 lg:pt-5"
+        >
           <div
             class="flex w-full p-1 gap-1 bg-white/40 dark:bg-slate-900/40 backdrop-blur-3xl rounded-2xl border border-white/20 dark:border-white/5 shadow-lg relative"
             id="tab-bar"
@@ -1235,38 +1239,42 @@
         <!-- Stock Header (shown when a stock is selected) -->
         <div
           id="stock-header"
-          class="hidden absolute top-16 left-0 right-0 z-20 px-8 pr-8 pt-5"
+          class="hidden absolute top-16 left-0 right-0 z-20 px-4 lg:px-8 pt-2 lg:pt-5"
         >
           <div
-            class="flex w-full items-center gap-3 p-3 bg-white/50 dark:bg-slate-900/50 backdrop-blur-xl rounded-2xl border border-white/30 dark:border-white/10"
+            class="flex w-full flex-col lg:flex-row items-stretch lg:items-center gap-3 p-3 bg-white/50 dark:bg-slate-900/50 backdrop-blur-xl rounded-2xl border border-white/30 dark:border-white/10"
           >
-            <!-- Glassmorphic Stock Symbol Badge -->
-            <div
-              class="w-10 h-10 bg-gradient-to-br from-primary-500/80 to-blue-500/80 backdrop-blur-md rounded-xl flex items-center justify-center text-white font-black text-sm shadow-lg border border-white/20"
-            >
-              <span id="stock-header-symbol">---</span>
-            </div>
-            <div class="flex-1 min-w-0">
-              <h3
-                id="stock-header-name"
-                class="font-bold text-slate-800 dark:text-slate-100 text-sm truncate"
+            <!-- Row 1: Symbol & Name -->
+            <div class="flex items-center gap-3 w-full lg:w-auto lg:flex-1">
+              <!-- Glassmorphic Stock Symbol Badge -->
+              <div
+                class="w-10 h-10 bg-gradient-to-br from-primary-500/80 to-blue-500/80 backdrop-blur-md rounded-xl flex items-center justify-center text-white font-black text-sm shadow-lg border border-white/20 shrink-0"
               >
-                Chọn mã cổ phiếu
-              </h3>
-              <p
-                class="text-[10px] text-slate-500 dark:text-slate-400 uppercase tracking-widest font-bold"
-              >
-                Đang xem chi tiết
-              </p>
+                <span id="stock-header-symbol">---</span>
+              </div>
+              <div class="flex-1 min-w-0">
+                <h3
+                  id="stock-header-name"
+                  class="font-bold text-slate-800 dark:text-slate-100 text-sm truncate"
+                >
+                  Chọn mã cổ phiếu
+                </h3>
+                <p
+                  class="text-[10px] text-slate-500 dark:text-slate-400 uppercase tracking-widest font-bold"
+                >
+                  Đang xem chi tiết
+                </p>
+              </div>
             </div>
-            <!-- External Chart Links with Glassmorphism -->
-            <div id="stock-header-links" class="flex gap-2">
+
+            <!-- Row 2: External Chart Links (Mobile: New line, Desktop: Right aligned) -->
+            <div id="stock-header-links" class="flex gap-2 w-full lg:w-auto pt-1 lg:pt-0 border-t border-white/10 lg:border-0 lg:ml-auto">
               <a
                 id="link-tradingview"
                 href="#"
                 target="_blank"
                 rel="noreferrer noopener"
-                class="flex items-center gap-1.5 px-3 py-2 bg-gradient-to-r from-[#2962FF]/60 to-[#1E88E5]/60 dark:from-[#2962FF]/90 dark:to-[#1E88E5]/90 hover:from-[#2962FF] hover:to-[#1E88E5] backdrop-blur-xl backdrop-saturate-150 text-white text-xs font-bold rounded-xl transition-all shadow-lg shadow-blue-500/20 dark:shadow-blue-500/30 border border-white/30 dark:border-white/10 ring-1 ring-inset ring-white/10 hover:shadow-xl hover:scale-105"
+                class="flex-1 lg:flex-none justify-center flex items-center gap-1.5 px-3 py-2 bg-gradient-to-r from-[#2962FF]/60 to-[#1E88E5]/60 dark:from-[#2962FF]/90 dark:to-[#1E88E5]/90 hover:from-[#2962FF] hover:to-[#1E88E5] backdrop-blur-xl backdrop-saturate-150 text-white text-xs font-bold rounded-xl transition-all shadow-lg shadow-blue-500/20 dark:shadow-blue-500/30 border border-white/30 dark:border-white/10 ring-1 ring-inset ring-white/10 hover:shadow-xl hover:scale-105"
               >
                 <!-- TradingView Logo -->
                 <svg class="w-4 h-4" viewBox="0 0 36 28" fill="currentColor">
@@ -1279,7 +1287,7 @@
                 href="#"
                 target="_blank"
                 rel="noreferrer noopener"
-                class="flex items-center gap-1.5 px-3 py-2 bg-gradient-to-r from-[#EF6C35]/60 to-[#FF8A50]/60 dark:from-[#EF6C35]/90 dark:to-[#FF8A50]/90 hover:from-[#EF6C35] hover:to-[#FF8A50] backdrop-blur-xl backdrop-saturate-150 text-white text-xs font-bold rounded-xl transition-all shadow-lg shadow-orange-500/20 dark:shadow-orange-500/30 border border-white/30 dark:border-white/10 ring-1 ring-inset ring-white/10 hover:shadow-xl hover:scale-105"
+                class="flex-1 lg:flex-none justify-center flex items-center gap-1.5 px-3 py-2 bg-gradient-to-r from-[#EF6C35]/60 to-[#FF8A50]/60 dark:from-[#EF6C35]/90 dark:to-[#FF8A50]/90 hover:from-[#EF6C35] hover:to-[#FF8A50] backdrop-blur-xl backdrop-saturate-150 text-white text-xs font-bold rounded-xl transition-all shadow-lg shadow-orange-500/20 dark:shadow-orange-500/30 border border-white/30 dark:border-white/10 ring-1 ring-inset ring-white/10 hover:shadow-xl hover:scale-105"
               >
                 <!-- Investing.com Logo -->
                 <svg class="w-4 h-4" viewBox="0 0 24 24" fill="currentColor">
@@ -1296,7 +1304,7 @@
         <!-- Tab Content Area -->
         <div
           id="tab-content-container"
-          class="flex-1 w-full pt-20 px-8 pr-8 pb-8 overflow-hidden z-10"
+          class="flex-1 w-full pt-16 lg:pt-20 px-4 pb-4 lg:px-8 lg:pb-8 overflow-visible lg:overflow-hidden z-10"
         >
           <!-- Data Placeholder / Welcome (Hidden by default since Chart is active) -->
           <div
@@ -1563,7 +1571,7 @@
       });
 
       document.addEventListener("mousemove", (e) => {
-        if (!isResizing) return;
+        if (!isResizing || window.innerWidth < 1024) return;
 
         const containerWidth = mainContainer.offsetWidth;
         let newLeftWidth = (e.clientX / containerWidth) * 100;
@@ -1579,8 +1587,13 @@
         if (activeBtn) updateTabIndicator(activeBtn);
       });
 
-      // Sync tab indicator on window resize
+      // Sync tab indicator on window resize and reset layout for mobile
       window.addEventListener("resize", () => {
+        // If mobile view, reset the inline width usage to let CSS classes take over
+        if (window.innerWidth < 1024) {
+          leftColumn.style.width = "";
+        }
+
         const activeBtn = document.querySelector(".sidebar-tab-btn.active");
         if (activeBtn) updateTabIndicator(activeBtn);
       });
@@ -2599,15 +2612,17 @@
         // Adjust content container padding to ensure clearance for stock header
         document
           .getElementById("tab-content-container")
-          .classList.remove("pt-20");
-        document.getElementById("tab-content-container").classList.add("pt-44");
+          .classList.remove("pt-16", "lg:pt-20");
+        document
+          .getElementById("tab-content-container")
+          .classList.add("pt-52", "lg:pt-44");
 
         // Update Chart Tab with Advanced Controls + Dual Charts
         const chartTab = document.getElementById("tab-content-chart");
         chartTab.innerHTML = `
                 <div class="h-full w-full flex flex-col gap-3">
                     <!-- Chart Controls -->
-                    <div class="flex flex-wrap items-center gap-2 p-3 bg-white/30 dark:bg-slate-900/30 rounded-2xl border border-white/40 dark:border-white/10 backdrop-blur-sm">
+                    <div class="flex flex-wrap items-center gap-2 p-3 bg-white/30 dark:bg-slate-900/30 rounded-2xl border border-white/40 dark:border-white/10 backdrop-blur-sm relative z-20">
                         <!-- Timeframe Selector -->
                         <div class="flex items-center gap-1">
                             <span class="text-xs font-bold text-slate-500 dark:text-slate-400 uppercase">Khoảng:</span>
@@ -2626,36 +2641,45 @@
                         <div class="flex items-center gap-1">
                             <span class="text-xs font-bold text-slate-500 dark:text-slate-400 uppercase">Chu kỳ:</span>
                             <select id="chart-interval" class="text-xs font-bold bg-white/60 dark:bg-slate-800/60 border border-slate-200 dark:border-slate-700 rounded-lg px-2 py-1 outline-none focus:ring-2 focus:ring-primary-500/30">
-                                <option value="1H" selected>1 giờ</option>
-                                <option value="1D">1 ngày</option>
+                                <option value="1H">1 giờ</option>
+                                <option value="1D" selected>1 ngày</option>
                             </select>
                         </div>
-                        <!-- Indicator Toggles -->
-                        <div class="flex items-center gap-3 ml-auto">
-                            <label class="flex items-center gap-1.5 cursor-pointer group">
-                                <input type="checkbox" id="indicator-ma" class="w-4 h-4 rounded border-slate-300 accent-blue-500 transition-transform group-hover:scale-110">
-                                <span class="text-xs font-bold text-blue-500">MA20</span>
-                            </label>
-                            <label class="flex items-center gap-1.5 cursor-pointer group">
-                                <input type="checkbox" id="indicator-ema" class="w-4 h-4 rounded border-slate-300 accent-orange-500 transition-transform group-hover:scale-110">
-                                <span class="text-xs font-bold text-orange-500">EMA9</span>
-                            </label>
-                            <label class="flex items-center gap-1.5 cursor-pointer group">
-                                <input type="checkbox" id="indicator-bb" class="w-4 h-4 rounded border-slate-300 accent-purple-500 transition-transform group-hover:scale-110">
-                                <span class="text-xs font-bold text-purple-500">BB</span>
-                            </label>
-                            <label class="flex items-center gap-1.5 cursor-pointer group">
-                                <input type="checkbox" id="indicator-rsi" class="w-4 h-4 rounded border-slate-300 accent-amber-500 transition-transform group-hover:scale-110">
-                                <span class="text-xs font-bold text-amber-500">RSI</span>
-                            </label>
-                            <label class="flex items-center gap-1.5 cursor-pointer group">
-                                <input type="checkbox" id="indicator-macd" class="w-4 h-4 rounded border-slate-300 accent-blue-500 transition-transform group-hover:scale-110">
-                                <span class="text-xs font-bold text-blue-500">MACD</span>
-                            </label>
-                            <label class="flex items-center gap-1.5 cursor-pointer group">
-                                <input type="checkbox" id="indicator-vol-sma" class="w-4 h-4 rounded border-slate-300 accent-violet-500 transition-transform group-hover:scale-110">
-                                <span class="text-xs font-bold text-violet-500">Vol SMA</span>
-                            </label>
+                        <!-- Indicator Toggles with Mobile Dropdown -->
+                        <div class="relative ml-auto">
+                            <!-- Mobile Trigger Button -->
+                            <button onclick="document.getElementById('mobile-indicators').classList.toggle('hidden')" class="lg:hidden flex items-center gap-1 text-xs font-bold px-2 py-1 bg-white/60 dark:bg-slate-800/60 rounded-lg border border-slate-200 dark:border-slate-700">
+                                <span>Chỉ báo</span>
+                                <svg class="w-3 h-3" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>
+                            </button>
+
+                            <!-- Indicators List -->
+                            <div id="mobile-indicators" class="hidden lg:flex lg:items-center lg:gap-3 absolute lg:static top-full right-0 mt-2 lg:mt-0 p-3 lg:p-0 bg-white/90 dark:bg-slate-900/90 lg:bg-transparent backdrop-blur-xl lg:backdrop-blur-none border border-white/20 lg:border-0 rounded-xl lg:rounded-none shadow-xl lg:shadow-none flex-col lg:flex-row gap-3 min-w-[120px] z-50">
+                                <label class="flex items-center gap-1.5 cursor-pointer group whitespace-nowrap">
+                                    <input type="checkbox" id="indicator-ma" class="w-4 h-4 rounded border-slate-300 accent-blue-500 transition-transform group-hover:scale-110">
+                                    <span class="text-xs font-bold text-blue-500">MA20</span>
+                                </label>
+                                <label class="flex items-center gap-1.5 cursor-pointer group whitespace-nowrap">
+                                    <input type="checkbox" id="indicator-ema" class="w-4 h-4 rounded border-slate-300 accent-orange-500 transition-transform group-hover:scale-110">
+                                    <span class="text-xs font-bold text-orange-500">EMA9</span>
+                                </label>
+                                <label class="flex items-center gap-1.5 cursor-pointer group whitespace-nowrap">
+                                    <input type="checkbox" id="indicator-bb" class="w-4 h-4 rounded border-slate-300 accent-purple-500 transition-transform group-hover:scale-110">
+                                    <span class="text-xs font-bold text-purple-500">BB</span>
+                                </label>
+                                <label class="flex items-center gap-1.5 cursor-pointer group whitespace-nowrap">
+                                    <input type="checkbox" id="indicator-rsi" class="w-4 h-4 rounded border-slate-300 accent-amber-500 transition-transform group-hover:scale-110">
+                                    <span class="text-xs font-bold text-amber-500">RSI</span>
+                                </label>
+                                <label class="flex items-center gap-1.5 cursor-pointer group whitespace-nowrap">
+                                    <input type="checkbox" id="indicator-macd" class="w-4 h-4 rounded border-slate-300 accent-blue-500 transition-transform group-hover:scale-110">
+                                    <span class="text-xs font-bold text-blue-500">MACD</span>
+                                </label>
+                                <label class="flex items-center gap-1.5 cursor-pointer group whitespace-nowrap">
+                                    <input type="checkbox" id="indicator-vol-sma" class="w-4 h-4 rounded border-slate-300 accent-violet-500 transition-transform group-hover:scale-110">
+                                    <span class="text-xs font-bold text-violet-500">Vol SMA</span>
+                                </label>
+                            </div>
                         </div>
                     </div>
 
